2008-05-06  Richard Dale  <richard.j.dale@gmail.com>

	* Regenerate the C# sources from the Qt 4.4 release headers

2008-04-10  Richard Dale  <richard.j.dale@gmail.com>

	* Added the missing QWebHitTestResult.cs source. Thanks to annma for 
	  noticing

2008-04-20  Arno Rehn  <arno@arnorehn.de>

	* Since Mono 1.9 inherited private members are not included in the search
	  by Type.Get*. So now search in the whole hierarchy for the private field
	  'smokeObject'.


	* Regenerated the Qyoto sources from the Qt 4.4 rc1 headers

2008-03-03  Richard Dale  <richard.j.dale@gmail.com>

	* Added some more Qt 4.4 classes
	* Added some marshallers for new Qt 4.4 QList types
	* Brought the MonoDevelopment Qyoto project up to date with the current
	  sources

2008-02-25  Richard Dale  <richard.j.dale@gmail.com>

	* Regenerated the sources with the Qt 4.4 headers
	* Added the QtWebKit classes

2007-11-29  Richard Dale  <rdale@foton.es>

	* Fixed the simpletreemodel example so that the Flags() method returns
	  a uint
	* The GetCPPEnumValue() used by uics generate code now returns a uint
	* Thanks to Jos van den Oever for reporting these two bugs

2007-11-10  Richard Dale  <rdale@foton.es>

	* Fix regressions caused by attempt to tidy up the skipped methods code
	  generation

2007-10-18  Richard Dale  <rdale@foton.es>

	* Simply the code to special case which classes and methods are to be skipped
	  when generating the bindings. Regenerate to add a few missing methods

2007-08-11  Arno Rehn  <arno@arnorehn.de>

	* If a marshaller is given a zero pointer, return zero and don't free
	  the GCHandle.
	* Added implicit type conversions for QUrl.
	* Fixed generation of ToolBarArea and DockWidgetArea related stuff in
	  uics.
	* Improved Qyoto.GetPrimitiveString()

2007-08-09  Richard Dale  <rdale@foton.es>

	* Added some missing implicit type conversions to better match 
	  the C++ api

2007-07-15  Arno Rehn  <arno@arnorehn.de>
